@@ -1,3 +1,8 @@
+2017-January-21 Struan Robertson
+
+		* ConditionsManager.h/.cpp, System.h/.cpp, Analysis.h: Write out parameter values and 
+		warnings to xml output.
+
 2017-January-28 Chris Morley
 
 		Update of schema to include DefinedDensityOfStates and, more generally, me:DOSCMethods
